#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[workspace]

members = [
    "kuksa_databroker/databroker",
    "kuksa_databroker/databroker-proto",
    "kuksa_databroker/databroker-cli",
    "kuksa_databroker/databroker-examples",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chariott-common = { path = "./chariott/common/" }
futures = { version = "0.3" }
lazy_static = "1.4.0"
prost = "0.11"
prost-types = "0.11"
regex = "1.6"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros"] }
tokio-util = "0.7.3"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
tonic-build = "0.8"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4"] }
url = "2.2"
test-case = "2.2.2"

[profile.release]
lto = true                 # Link time optimization (dead code removal etc...)
opt-level = "s"
codegen-units = 1
incremental = false
# debug = true               # for profiling (turn off otherwise)
# split-debuginfo = "packed" # only enable when `debug = true``
