#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[package]
name = "databroker"
version = "0.3.0"
authors = ["Robert Bosch GmbH"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "databroker"
path = "src/lib.rs"

[dependencies]
databroker-proto = { path = "../databroker-proto" }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { workspace = true, features = ["sync", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
clap = { version = "3.1.10", default-features = false, features = [
    "std",
    "env",
] }
sqlparser = "0.16.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chariott-client = { path = "../../chariott/client" }
url = { workspace = true }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

[build-dependencies]
anyhow = "1.0"
vergen = { version = "7", default-features = false, features = [
    "cargo",
    "git",
] }
